tests/NormalTests/paczka1/small_fuzzy/26694206.err
Error in line 1: skDSEBTtM S933 54,2
Error in line 6: FX9hj5O42D S47 85,7
